# city-public-services

./: .gitignore  README.md  proposal.md  start-dev.bat
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: admin.py  auth.py  deps.py  public.py
backend/app/core/: config.py  security.py
backend/app/db/: init_db.py
backend/app/models/: __init__.py  admin_user.py  category.py  news.py  point.py
backend/app/schemas/: category.py  common.py  home.py  news.py  point.py
backend/app/seed/: data.py
backend/app/services/: query.py
backend/tests/: test_api.py
frontend/: package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/api/: client.js
frontend/src/components/: AppFooter.vue  AppHeader.vue  CategoryCard.vue  EmptyState.vue  FeaturePanel.vue  HeroBanner.vue  LoadingState.vue  NewsCard.vue  PointCard.vue  QuickNavCard.vue  SectionTitle.vue  StatCard.vue
frontend/src/components/admin/: AdminConfirmDialog.vue  AdminDialog.vue  AdminPagination.vue  AdminShell.vue  AdminStatusBadge.vue  AdminTable.vue
frontend/src/router/: index.js
frontend/src/stores/: admin.js
frontend/src/views/: AboutView.vue  CategoriesView.vue  HomeView.vue  NewsDetailView.vue  NewsListView.vue  PointDetailView.vue  PointsView.vue
frontend/src/views/admin/: AdminCategoriesView.vue  AdminDashboardView.vue  AdminLoginView.vue  AdminNewsView.vue  AdminPointsView.vue
scripts/: start-backend.ps1  start-frontend.ps1
